--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li>Login</li>
             </ul>
             <a href=""><div class="profile">
-                <img src="icons/user.svg" width="40">
+                <img src="user.svg" width="40">
             </div></a>
         </div>
         
